--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 
 body {
 	  transition: all 1s ease;
-  	  background-color: #d80000;
+  	  background-color: #13b263;
   	  font-family: Lucida Grande;
 }
 
